--- a/students_program/assets/css/styles.css
+++ b/students_program/assets/css/styles.css
@@ -1404,7 +1404,7 @@ ul.rbt-dropdown-menu li .sub-menu li a, ul.rbt-dropdown-menu li a .right-icon, u
 }
 
 .bg-gradient-3 {
-  background: var(--gradient-3) !important;
+  background:  #2f57ef !important;
 }
 
 .bg-gradient-4 {
@@ -12781,7 +12781,7 @@ fieldset:disabled {
 .rbt-btn.btn-gradient {
   color: var(--color-white);
   background-size: 300% 100%;
-  background-image: linear-gradient(to right, var(--color-primary), var(--color-secondary), var(--color-secondary), var(--color-primary));
+  background-image: linear-gradient(to right, var(--color-primary), var(--color-primary));
 }
 .rbt-btn.btn-gradient.btn-gradient-2 {
   background-image: linear-gradient(to right, var(--color-pink), var(--color-violet), var(--color-violet), var(--color-pink));
@@ -19249,7 +19249,7 @@ Testimonial Styles
 }
 
 .bg-theme-gradient-odd:nth-child(odd) .rbt-testimonial-box .inner {
-  background: var(--gradient-7);
+  background:  #2f57ef;;
 }
 .bg-theme-gradient-odd:nth-child(odd) .rbt-testimonial-box .description p {
   color: var(--color-white);
@@ -19259,7 +19259,7 @@ Testimonial Styles
 }
 
 .bg-theme-gradient-even:nth-child(even) .rbt-testimonial-box .inner {
-  background: var(--gradient-7);
+  background: #2f57ef;
 }
 .bg-theme-gradient-even:nth-child(even) .rbt-testimonial-box .description p {
   color: var(--color-white);
@@ -24119,11 +24119,11 @@ blockquote.has-text-align-right cite,
     Banner Style Home One And Home Five (variation-2)
 -------------------------------------------------------------*/
 .rbt-banner-1 {
-  background-color: var(--color-light);
+  background-color:  #2f57ef;
   padding: 0 150px;
   position: relative;
   overflow: hidden;
-  background-image: url(../images/bg/bg-g1.webp);
+  /* background-image: url(../images/bg/bg-g1.webp); */
   background-position: top center;
   background-size: cover;
 }
