--- a/demos/marketing/marketing.css
+++ b/demos/marketing/marketing.css
@@ -7,7 +7,7 @@
 :root {      
     --alt-font: 'Inter', sans-serif;
     --primary-font: 'Inter', sans-serif;
-    --base-color: #f96f4a;
+    --base-color: #2f57ef;
     --dark-gray: #1f242e; 
     --yellow: #ffeb7d; 
     --medium-gray: #717580;
