--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ Table of contents
     02. CSS color variable
 ====================================== */
 :root {
-  --base-color: #2946f3;
+  --base-color: #2f57ef !important;
   --white: #ffffff;
   --black: #000000;
   --red: #dc3131;
@@ -608,7 +608,7 @@ a.text-white-hover:hover {
 }
 .text-base-color,
 .btn-link.text-base-color {
-  color: var(--base-color);
+  color: var(--base-color) !important;
 }
 .text-black,
 .btn-link.text-black,
@@ -20562,7 +20562,7 @@ footer .footer-navbar .nav-item:last-child a {
 }
 
 .badge_highlight {
-  background-color: #ff6a4f;
+  background-color: #2f57ef;
   color: #fff;
   padding: 8px 12px;
   border-radius: 5px;
