--- a/students_program/assets/css/styles.css
+++ b/students_program/assets/css/styles.css
@@ -24119,7 +24119,7 @@ blockquote.has-text-align-right cite,
     Banner Style Home One And Home Five (variation-2)
 -------------------------------------------------------------*/
 .rbt-banner-1 {
-  background-color:  #2f57ef;
+  background-color:  #bdcbff;
   padding: 0 150px;
   position: relative;
   overflow: hidden;
